--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <title>pizarra|offers the best you would get</title>
 </head>
 <body>
+<header>
+    <nav>
+        <div class="nav left">
+<img src="images/images/logo.svg" alt="">
+        </div>
+        <div class="nav-center">
+<ul>
+    <li><a href="#">home</a></li>
+    <li><a href="#">About us</a></li>
+    <li><a href="#">shop</a></li>
+    <li><a href="#">contact</a></li>
+</ul>
+        </div>
+        <div class="right">
+            <img src="images/images/shopping-cart.png" alt="">
+<img src="images/images/avatar.png" alt="">
+        </div>
+    </nav>
+</header>    
     
 </body>
 </html>
