--- a/index.html
+++ b/index.html
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>pizarra|offers the best you would get</title>
-</head>
-<body>
-<header>
-    <nav>
-        <div class="nav left">
-<img src="images/images/logo.svg" alt="">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="container">
+          <div class="nav">
+            <div class="nav-left">
+              <img src="images/images/logo.svg" alt="" />
+            </div>
+            <div class="nav-center">
+              <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">About us</a></li>
+                <li><a href="#">shop</a></li>
+                <li><a href="#">contact</a></li>
+              </ul>
+            </div>
+            <div class="nav-right">
+              <img src="images/images/shopping-cart.png" width="50" alt="" />
+              <img src="images/images/avatar.png" width="50" alt="" />
+              <i class="fa-solid fa-bars"></i>
+            </div>
+          </div>
         </div>
-        <div class="nav-center">
-<ul>
-    <li><a href="#">home</a></li>
-    <li><a href="#">About us</a></li>
-    <li><a href="#">shop</a></li>
-    <li><a href="#">contact</a></li>
-</ul>
-        </div>
-        <div class="right">
-            <img src="images/images/shopping-cart.png" alt="">
-<img src="images/images/avatar.png" alt="">
-        </div>
-    </nav>
-</header>    
-    
-</body>
+      </nav>
+    </header>
+  </body>
 </html>
