almost in completing my home page

--- a/index.html
+++ b/index.html
@@ -38,5 +38,177 @@
         </div>
       </nav>
     </header>
+
+
+
+    <section class="hero">
+
+      <div>
+      <div class="heroleft">
+        <h3>Easy way to order your food</h3>
+        <h1>Choosing<span style="color: orange;">Healthy</span><br>& <span style="color: orange;">Fresh</span>Pizza</br></h1>
+        <h4>we offer the fastest and fovorite pizza delivery services all over the country.<br>search for your favorite pizza topping here</br></h4>
+        </div>
+        <div class="pg">
+           <div><label for="txt":></label></div>
+          <input type="text" placeholder="find pizza type"/>
+        <button>search</button>
+        </div>
+        <div class="heromiddle">
+            <div class="first">
+              <div class="font">
+            <img src="images/images/cutlery.png"  width="40" alt="">
+              </div>
+            <h2>500+</h2>
+            <p>Restaurants</p>
+            </div>
+            <div class="first">
+              <div class="font">
+              <img src="images/images/varieties.png" width="40" alt="">
+              </div>
+              <h2>200+</h2>
+              <p>Pizza varieties</p>
+            </div>
+            <div class="first"> 
+              <div class="font">            
+               <img src="images/images/star.png" width="40" alt="">
+               </div>
+              <h2>(7.8)</h2>
+              <p>10K Reviews</p>
+            </div>
+        </div>
+        </div>
+
+
+        <div>
+        <div class="heroright">
+        <img src="images/images/hero-pizza.png" width="400" alt="">
+        </div>
+        <div class="imejes2">
+        <img src="images/images/pizza-1.png"  width="200" alt="">
+        <img src="images/images/pizza-2.png"  width="200" alt="">
+        <img src="images/images/pizza-3.png"  width="200" alt="">
+        <img src="images/images/pizza-4.png"  width="200" alt="">
+        </div>
+        </div>
+    </section>
+
+
+
+
+    <main>
+      <div class="container">
+      <h3>New in menu</h3>
+    <h1><span style="color: orange;">Special Menu</span> for you</h1>
+    <div class="flavours">
+    <ul class="taste">
+      <li><a href="#">Chicken Pizza</a></li>
+      <li><a href="#">Pepperoni</a></li>
+      <li><a href="#">Margherita</a></li>
+      <li><a href="#">Hawaiian</a></li>
+      <li><a href="#">Meat Lover's Pizza</a></li>
+    </ul>
+    </div>
+
+
+    <div class="price">
+    <div>
+      <img src="images/images/barbecue-chicken-pizza.png" width="200px" alt="">
+      <h4>BBQ Chicken Pizza</h4>
+      <p>(cheese with shrimp)</p>
+      <h4>Ksh. 1500</h4>
+      <button>Add to cart</button>
+    </div>
+
+    <div>
+      <img src="images/images/tandoori-chicken.png" width="200px" alt="">
+      <h4>Tandoori Chicken Pizza</h4>
+      <p>(cheese with shrimp)</p>
+      <h4>Ksh. 1500</h4>
+      <button>Add to cart</button>
+    </div>
+
+
+    <div>
+      <img src="images/images/kebab.png" width="260px" alt="">
+      <h4>Chicken Kebab Pizza</h4>
+      <P>(cheese with shrimp)</P>
+      <h4>Ksh. 1500</h4>
+      <button>Add to cart</button>
+    </div>
+    </div>
+    <div class="btn1">
+      <button>View More</button>
+      </div>
+      </div>
+</main>
+
+
+
+
+   <about>  
+
+<div>
+      <img src="images/images/why-us.png" width="300px" alt="">
+</div>
+<div>
+  <h3>Why Us</h3>
+  <h1>Why We Are <span style=color:orange;>The Best</span></h1>
+  <p>We always try to maintain our food quality for our custorms.<br>Our customers satisfaction is our top priority</br></p>
+</div>
+
+
+<div class="More">
+    <div>
+  <img src="images/images/varieties.png" width="40" alt="">
+  <h1>Fresh Pizza</h1>
+  <p>We make our pizza to suit your needs as we use the best quality ingredients.</p>
+</div>
+
+
+
+
+  <div>
+  <img src="images/images/fast-delivery.png" width="40" alt="">
+  <h1>Fast delivery</h1>
+  <p>Through rapid delivery,we provide a high level of customer service</p>
+  </div>
+
+
+
+
+
+  <div>
+    <img src="images/images/quality.png" width="40" alt="">
+    <h1>Best quality</h1>
+    <p>our delivery services that is available at any time and usually everyday.</p>
+  </div>
+  </div>
+</about>
+
+
+<address>
+  <div class="container">
+<h2>Need Any Help?</h2>
+<h1><span style="color: orange;">Our Support Team</span> Is Ready To Assist You</h1>
+<div class="third">
+<img src="images/images/mail.png" width="30px" alt="">
+
+<h3>Email Address</h3>
+<p>pizaaradeliveries@info.com</p>
+</div>
+<div class="third">
+  <img src="images/images/live-support.png" width="30px" alt="">
+<h3>Live Support</h3>
+<p>Get live support now</p>
+</div>
+<div class="third"> 
+  <img src="images/images/phone.png" width="30px" alt="">
+<h3>Phone Number</h3>
+<p>+254 11 555 888</p>
+</div>
+</div>
+</address>
   </body>
 </html>
+
