done with both shop and home pages

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </div>
             <div class="nav-center">
               <ul>
-                <li><a href="#">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="#">About us</a></li>
-                <li><a href="#">shop</a></li>
+                <li><a href="shop.html">shop</a></li>
                 <li><a href="#">contact</a></li>
               </ul>
             </div>
@@ -82,13 +82,13 @@
 
         <div>
         <div class="heroright">
-        <img src="images/images/hero-pizza.png" width="400" alt="">
+        <img src="images/images/hero-pizza.png" width="300" alt="">
         </div>
         <div class="imejes2">
         <img src="images/images/pizza-1.png"  width="200" alt="">
-        <img src="images/images/pizza-2.png"  width="200" alt="">
-        <img src="images/images/pizza-3.png"  width="200" alt="">
-        <img src="images/images/pizza-4.png"  width="200" alt="">
+        <img src="images/images/pizza-2.png"  width="150" alt="">
+        <img src="images/images/pizza-3.png"  width="150" alt="">
+        <img src="images/images/pizza-4.png"  width="150" alt="">
         </div>
         </div>
     </section>
@@ -98,8 +98,8 @@
 
     <main>
       <div class="container">
-      <h3>New in menu</h3>
-    <h1><span style="color: orange;">Special Menu</span> for you</h1>
+      <h3 id="new">New in menu</h3>
+    <h1 class="in"><span style="color: orange;">Special Menu</span> for you</h1>
     <div class="flavours">
     <ul class="taste">
       <li><a href="#">Chicken Pizza</a></li>
@@ -109,10 +109,10 @@
       <li><a href="#">Meat Lover's Pizza</a></li>
     </ul>
     </div>
-
+    <hr/>
 
     <div class="price">
-    <div>
+    <div class="p2">
       <img src="images/images/barbecue-chicken-pizza.png" width="200px" alt="">
       <h4>BBQ Chicken Pizza</h4>
       <p>(cheese with shrimp)</p>
@@ -120,7 +120,7 @@
       <button>Add to cart</button>
     </div>
 
-    <div>
+    <div class="p3">
       <img src="images/images/tandoori-chicken.png" width="200px" alt="">
       <h4>Tandoori Chicken Pizza</h4>
       <p>(cheese with shrimp)</p>
@@ -129,7 +129,7 @@
     </div>
 
 
-    <div>
+    <div class="p4">
       <img src="images/images/kebab.png" width="260px" alt="">
       <h4>Chicken Kebab Pizza</h4>
       <P>(cheese with shrimp)</P>
@@ -154,7 +154,7 @@
 <div>
   <h3>Why Us</h3>
   <h1>Why We Are <span style=color:orange;>The Best</span></h1>
-  <p>We always try to maintain our food quality for our custorms.<br>Our customers satisfaction is our top priority</br></p>
+  <p1>We always try to maintain our food quality for our custorms.<br>Our customers satisfaction is our top priority</br></p1>
 </div>
 
 
@@ -189,26 +189,77 @@
 
 <address>
   <div class="container">
+    <div class="help">
+<div>
 <h2>Need Any Help?</h2>
 <h1><span style="color: orange;">Our Support Team</span> Is Ready To Assist You</h1>
+</div>
+    <div class="none">
+<div>
 <div class="third">
 <img src="images/images/mail.png" width="30px" alt="">
-
+</div>
 <h3>Email Address</h3>
 <p>pizaaradeliveries@info.com</p>
 </div>
+
+
+
+
+<div>
 <div class="third">
   <img src="images/images/live-support.png" width="30px" alt="">
+</div>
 <h3>Live Support</h3>
 <p>Get live support now</p>
 </div>
+
+
+    <div>
 <div class="third"> 
   <img src="images/images/phone.png" width="30px" alt="">
+</div>
 <h3>Phone Number</h3>
 <p>+254 11 555 888</p>
-</div>
+    </div>
+    </div>
+  </div>
 </div>
 </address>
+
+
+<footer>
+ <img src="images/images/logo_light.svg" alt=""/> 
+ <h1>stay connected</h1>
+ <img src="images/images/facebook.png" width="30px" alt="">
+ <img src="images/images/instagram.png" width="30px" alt="">
+ <img src="images/images/twitter.png" width="30px" alt="">
+ <img src="images/images/linkedin.png" width="30px" alt="">
+ <div class="last">
+ <h1>Quick Links</h1>
+ <ul class="list">
+  <li ><a href="#">home</a></li>
+  <li><a href="#">About us</a></li>
+  <li><a href="#">shop</a></li>
+  <li><a href="#">contact</a></li>
+</ul>
+ </div>
+<h1>Subscribe To Our  Newsletter to stay updated</h1>
+<div class="all">
+<div class="remove">
+  <div><label for="txt":></label></div>
+ <input type="text" placeholder="Email Address"/>
+</div>
+ <div class="btn3">
+<button>Subscribe</button>
+</div>
+</div>
+</footer>
+
+
+
+
+
   </body>
 </html>
 
