completed to my ability

--- a/index.html
+++ b/index.html
@@ -190,12 +190,13 @@
 <address>
   <div class="container">
     <div class="help">
-<div>
+<div class="me">
 <h2>Need Any Help?</h2>
 <h1><span style="color: orange;">Our Support Team</span> Is Ready To Assist You</h1>
 </div>
+
     <div class="none">
-<div>
+<div class="board">
 <div class="third">
 <img src="images/images/mail.png" width="30px" alt="">
 </div>
@@ -206,7 +207,7 @@
 
 
 
-<div>
+<div class="board">
 <div class="third">
   <img src="images/images/live-support.png" width="30px" alt="">
 </div>
@@ -215,7 +216,7 @@
 </div>
 
 
-    <div>
+    <div class="board">
 <div class="third"> 
   <img src="images/images/phone.png" width="30px" alt="">
 </div>
